<resources>
    <string name="app_name">NightOwl</string>
    <string name="title_activity_maps">Map</string>


    <string name="near_you">Near You</string>
    <string name="favorites">Favorites</string>
    <string name="top_nightlife">Top Nightlife</string>


    <string name="place_title">Place Title</string>
    <string name="place_rating">Place Rating</string>
    <string name="place_type">Place Type</string>
    <string name="place_address">1892 Street Address</string>
    <string name="place_phone">(000) 000-0000</string>
    <string name="place_description">Description Description Description</string>
    <string name="place_open">Open</string>
    <string name="place_closed">Closed</string>
    <string name="place_closing_time">Closes 3 AM</string>
    <string name="spacer_circle">●</string>

    <string name="uber_here">Take an Uber!</string>
    <string name="place_URL">placewebsite.com</string>

    <string name="loading">Loading&#8230;</string>
    <string name="restaurants">Restaurants</string>
    <string name="clubs">Night Clubs</string>
    <string name="bars">Bars</string>


    <string name="sample_description">Description Description Description Description Description Description
    Description Description Description Description Description Description  </string>


</resources>
