<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/selectedPlaceBottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/placeBottomSheetBackground"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/placeTitleBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/placeBottomSheetTitleBar"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <TextView
                android:id="@+id/spName"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:textSize="20sp"
                android:textColor="@color/placeName"
                android:text="@string/place_title"/>

            <TextView
                android:id="@+id/spRating"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:textSize="15sp"
                android:textColor="@color/placeDetails"
                android:text="@string/place_rating"/>

            <TextView
                android:id="@+id/spType"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:textSize="15sp"
                android:textColor="@color/placeDetails"
                android:text="@string/place_type"/>

        </LinearLayout>


        <View
            android:id="@+id/uberIconBottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </View>

        <View
            android:id="@+id/callIconBottomSheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </View>

    </LinearLayout>

    <ScrollView
        android:id="@+id/spDetailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@+id/placeTitleBar"
        android:background="@color/placeBottomSheetBackground">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp">

            <LinearLayout
                android:id="@+id/spDescriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/spDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/placeDetails"
                    android:text="@string/sample_description"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/spAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorAccent">

                </View>

                <TextView
                    android:id="@+id/spAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/placeDetails"
                    android:text="@string/place_address"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spOpenClosedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorAccent">

                </View>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/spOpenClosed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/placeDetails"
                        android:text="@string/place_open"/>

                    <TextView
                        android:id="@+id/spSpacer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="10sp"
                        android:textColor="@color/placeDetails"
                        android:text="@string/spacer_circle"/>

                    <TextView
                        android:id="@+id/spClosingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/placeDetails"
                        android:text="@string/place_closing_time"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/spPhoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorAccent">

                </View>

                <TextView
                    android:id="@+id/spPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/placeDetails"
                    android:text="@string/place_phone"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spURLLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <View
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorAccent">

                </View>

                <TextView
                    android:id="@+id/spURL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:textColor="@color/placeDetails"
                    android:text="@string/place_URL"/>

            </LinearLayout>


        </LinearLayout>



    </ScrollView>


</RelativeLayout>